feat(fetcher): error handling
